# OPPlab4

./: CMakeLists.txt  JacobiMethod.cpp  JacobiMethod.h  Test.cpp  Test.h  main_mpi.cpp
